--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title> Index Page</title>
+    
     <link rel="shortcut icon" href="developer.png" type="image/x-icon">
     <link rel="icon" href="icon.svg" type="icon/svg">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
@@ -21,14 +22,14 @@
 
     </header>
     <p>
-
-    <a href="Personel.html" target="My Frame"> HOME </a>
+<nav>
+    <a href="info.html" target="My Frame"> HOME </a>
     &nbsp;&nbsp;&nbsp;
     <a href="Personel.html" target="My Frame"> PERSONAL DETAILS </a> &nbsp;&nbsp;&nbsp;
     <a href="techStack.html" target="My Frame"> Technology Stack </a>
     <hr>
 
-    <iframe src="" title="My Profile" width="700" height="400"></iframe>
+    <iframe name="My Frame" src="Images.html" width="600px" height="450px" style="border: none">
 
     </iframe>
 
