--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
     <a href="info.html" target="My Frame"> HOME </a>
     &nbsp;&nbsp;&nbsp;
     <a href="Personel.html" target="My Frame"> PERSONAL DETAILS </a> &nbsp;&nbsp;&nbsp;
-    <a href="techStack.html" target="My Frame"> Technology Stack </a>
+    <a href="Personel.html" target="My Frame"> TECH STACK </a>
+</nav>
     <hr>
 
     <iframe name="My Frame" src="Images.html" width="600px" height="450px" style="border: none">
