--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     <a href="info.html" target="My Frame"> HOME </a>
     &nbsp;&nbsp;&nbsp;
     <a href="Personel.html" target="My Frame"> PERSONAL DETAILS </a> &nbsp;&nbsp;&nbsp;
-    <a href="Personel.html" target="My Frame"> TECH STACK </a>
+    <a href="Personel.html" target="My Frame"> TECH STACK </a>&nbsp;&nbsp;&nbsp;
+    <a href="Images.html" target="My Frame"> GALLERY </a>
 </nav>
     <hr>
 
