--- a/index.html
+++ b/index.html
@@ -22,15 +22,16 @@
     </header>
     <p>
 <nav>
-    <a href="info.html" target="My Frame"> HOME </a>
+    <a href="home.html" target="My Frame"> HOME </a>
     &nbsp;&nbsp;&nbsp;
     <a href="Personel.html" target="My Frame"> PERSONAL DETAILS </a> &nbsp;&nbsp;&nbsp;
-    <a href="Personel.html" target="My Frame"> TECH STACK </a>&nbsp;&nbsp;&nbsp;
-    <a href="Images.html" target="My Frame"> GALLERY </a>
+    <a href="loginForm.html" target="My Frame"> APPLICATION FORM </a>&nbsp;&nbsp;&nbsp;
+    <a href="table+iamge.html" target="My Frame"> CELIBRATION  </a>&nbsp;&nbsp;&nbsp;
+    <a href="gallery.html" target="My Frame"> GALLERY </a>
 </nav>
     <hr>
 
-    <iframe name="My Frame" src="Images.html" width="600px" height="450px" style="border: none">
+    <iframe name="My Frame" src="Images.html" width="1500px" height="450px" style="border: none">
 
     </iframe>
 
