--- a/gallery.html
+++ b/gallery.html
@@ -23,6 +23,9 @@
    <video width="250" height="250" controls autoplay muted> 
       <source src="whatsap2.mp4" type="video/mp4"> 
    </video>
+   <video width="250" height="250" controls autoplay muted> 
+      <source src="whatsap2.mp4" type="video/mp4"> 
+   </video>
      <p>
      <h2> Audio List </h2>
 
