--- a/index.html
+++ b/index.html
@@ -3,32 +3,51 @@
 
 <head>
     <title> Index Page</title>
-    
+
     <link rel="shortcut icon" href="developer.png" type="image/x-icon">
     <link rel="icon" href="icon.svg" type="icon/svg">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
+<style>
+    header {
+        color: rgb(98, 0, 255);
+        background-color: rgb(92, 54, 54);
+    }
+    *{
+        background-color: chartreuse;
+    }
+    .main{
+        color: white;
+        background-color: black;
+    }
+    footer{
+        color: navy;
+        background-color: blue;
+    }
+
+</style>
+
 
 <body>
-       <header>
-        <i class="fa-solid fa-id-card"> &nbsp;&nbsp;&nbsp;Ganesh Narute</i>&nbsp;&nbsp;&nbsp;
-        <i class="fa-solid fa-phone">&nbsp;&nbsp;&nbsp;9823321174</i>&nbsp;&nbsp;&nbsp;
-        <i class="fa-solid fa-file-invoice">&nbsp;&nbsp;&nbsp;justganeshsn74@gmail.com</i>
+    <header>
+        <h3 class="fa-solid fa-fa-name"> Ganesh Narute</h3>&nbsp;&nbsp;&nbsp;
+        <h3 class="fa-solid fa-phone">9823321174</h3>&nbsp;&nbsp;&nbsp;
+        <h3 class="fa-solid fa-file-invoice">justganeshsn74@gmail.com</h3>
 
 
 
     </header>
     <p>
-<nav>
-    <a href="home.html" target="My Frame"> HOME </a>
-    &nbsp;&nbsp;&nbsp;
-    <a href="Personel.html" target="My Frame"> PERSONAL DETAILS </a> &nbsp;&nbsp;&nbsp;
-    <a href="loginForm.html" target="My Frame"> APPLICATION FORM </a>&nbsp;&nbsp;&nbsp;
-    <a href="table+iamge.html" target="My Frame"> CELIBRATION  </a>&nbsp;&nbsp;&nbsp;
-    <a href="gallery.html" target="My Frame"> GALLERY </a>
-</nav>
+    <nav>
+        <a class="main" href="home.html" target="My Frame"> HOME </a>
+        &nbsp;&nbsp;&nbsp;
+        <a class="main" href="Personel.html" target="My Frame"> PERSONAL DETAILS </a> &nbsp;&nbsp;&nbsp;
+        <a class="main"href="loginclass="mainForm.html" target="My Frame"> APPLICATION FORM </a>&nbsp;&nbsp;&nbsp;
+        <a class="main" href="table+iamge.html" target="My Frame"> CELIBRATION </a>&nbsp;&nbsp;&nbsp;
+        <a class="main"href="gallery.html" target="My Frame"> GALLERY </a>
+    </nav>
     <hr>
 
     <iframe name="My Frame" src="Images.html" width="1500px" height="450px" style="border: none">
@@ -44,17 +63,9 @@
             &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
             <a href="https://www.linkedin.com/%22 target=" _blank"> <i class="fa fa-linkedin-square"
                     aria-hidden="true"></i> </a>
-                    &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+            &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
             <a href="https://www.twitter.com/%22 target=" _blank"> <i class="fa fa-twitter-square"
                     aria-hidden="true"></i> </a>
         </p>
     </footer>
 </body>
-
-
-
-
-
-
-
-
