--- a/basic_css.html
+++ b/basic_css.html
@@ -3,9 +3,35 @@
 
 <head>
     <title>CSS Basic</title>
+    <style>
+        .box1{
+            border: 5px solid cadetblue;
+            width: 150px;
+            height: 150px;
+            /* padding-left: 58px;
+            padding-top: 30px;
+            padding-right: 68px;
+            padding-bottom: 48px; */
+            /* padding: 30px 60px 40px 50px; */
+            margin-bottom: 20px;
+        }
+        .box2{
+            border: 5px solid rgb(5, 8, 8);
+            width: 150px;
+            height: 150px;
+            margin-top: 50px;
+            
+        }
+    </style>
 </head>
-
 <body>
+    <div class="box1">
+        Hello how are you
+    </div>
+    <div class="box2">
+        IM Fine
+
+    </div>
     <h3 style="color:red; background-color: blueviolet;"> My name is Mohit Sharma</h3>
     <p> I am Engineering Graduates</p>
     <h4> Address: PUNE</h4>
