--- a/home.html
+++ b/home.html
@@ -9,14 +9,25 @@
         color: darkcyan;
         background-color: darksalmon;
     }
+    body{
+        
+        background-size: cover;
+    }
+    .list_role li{
+        margin: 10px;
+    }
+    marquee{
+        background-color: aqua;
+    }
 </style>
 
 
 <body>
-    <h3 style="color: rgb(0, 139, 12); background-color: darkred;"> Career Objectives </h3>
+    <marquee direction="left"  behavior="sliding"><h2> Career Object</h2></marquee>
+   
     <p> TO WORK IN ORGANIZATION WHERE I CAN LEARN AND GROW MY SKILLS AND HELP ORGANIZATIONAL GROWTH</p>
     <h3> Professional Summary </h3>
-    <ul>
+    <ul class="list_role">
         <li id="main"> Having 1 years of experience in developing Single page Web Applications using Angular 8, HTML5, CSS3,
             Bootstrap 5, JavaScript, TypeScript</li>
         <li id="main"> Experience on working with version control system - GIT and GitHub </li>
